--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
-  "expo": { "entryPoint": "./index.js" },
+  "expo": {
+    "entryPoint": "./index.js"
+  },
   "scripts": {
     "start": "expo start --dev-client",
     "prebuild": "expo prebuild --clean",
     "ios:local": "expo run:ios",
-    "clean": "rm -rf node_modules ios android package-lock.json && npm i"
+    "clean": "rm -rf node_modules ios android package-lock.json && npm i",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "expo": "~52.0.47",
@@ -18,5 +22,9 @@
     "expo-build-properties": "^0.13.3",
     "expo-modules-core": "~2.2.3",
     "fov-audio": "file:./modules/fov-audio"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "~18.3.12"
   }
 }
