omg it works via this: "modules": ["FOVAudioModule"],

--- a/modules/fov-audio/expo-module.config.json
+++ b/modules/fov-audio/expo-module.config.json
@@ -2,6 +2,7 @@
 	"name": "fov-audio",
 	"platforms": ["ios"],
 	"ios": {
+	  "modules": ["FOVAudioModule"],
 	  "podspecPath": "FOVAudio.podspec",
 	  "swiftModuleName": "FOVAudio"
 	}
